# fatteningroom

./: .gitignore  .gitlab-ci.yml  .stylelintignore  Dockerfile  README.md  eslint.config.mjs  jest.config.js  jest.reporting.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci-django-tests.yml  ci-pa11y.yml  linting.yml
django/: README.md  pa11y.test.js
django/account/: admin.py
django/core/: local_settings.example.py  local_settings.test.py  settings.py  urls.py  wsgi.py
django/core/static/css/: cookies.css  custom.css  custom_large.css  custom_small.css  style.css
django/core/static/documents/questionnaire/: Participant Information & Consent for Website - BFR Project.docx
django/core/static/js/: admin.js  cookiesmsg.js
django/core/templates/: base.html
django/core/templates/admin/: base_site.html
django/core/templates/snippets/: error-content.html
django/core/templatetags/: settings_value.py
django/general/templates/general/: about.html  cookies.html  team.html  welcome.html
django/news/: admin.py  apps.py  models.py  urls.py  views.py
django/news/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_article_videos.py
django/news/templates/news/: article-detail.html  article-list.html
django/researchdata/: admin.py  forms.py  models.py  urls.py  views.py
django/researchdata/migrations/: 0001_initial.py  0002_exploreitem.py
django/researchdata/templates/researchdata/: artobject-detail.html  artobject-list.html  exploreitem-detail.html  exploreitem-list.html  questionnaire-create-success.html  questionnaire-create.html
jest_setup_files/: accessibility_reporting_setup.js  accessibility_testing_setup.js  prepare_reporting_directory.js
